# agent2agent

./: .env  README.md
my-project/: pyproject.toml
my-project/src/my_project/: __init__.py  agent.py  task_manager.py
